[package]
name = "wordle-tournament-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "wordle_tournament_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

