[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wordle-tournament-lib"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.readme]
file = "README.md"

[tool.maturin]
python-source = "."
include = ["wordle_tournament_lib.pyi"]

